# Drone

./: .gitignore  README.md
Designs/: BatteryCase.stl  DroneRotorHolding.stl  ImprovedDroneBody.stl
Designs/FreeCad/: BatteryCase.20250301-205341.FCBak  BatteryCase.FCStd  Drohne Julius.FCStd  DroneRotorHolding.20250304-201731.FCBak  DroneRotorHolding.FCStd  DroneRotorHolding.stl  ImprovedDroneBody.20250301-195515.FCBak  ImprovedDroneBody.20250307-134633.FCBak  ImprovedDroneBody.FCStd  ImprovedDroneBody.stl
Documentation/: Batterie.md  Brushless_Motor.md  ESC.md  ESP-Wifi.md  ESP32-Wroom-32.md  Errors.md  Flight controller.md  MPU-6050.md  Memory.md  PID.md  Produktliste.md  Untitled.md
Documentation/.obsidian/: workspace.json
DroneBody/: Drohne.stl  DroneSemiFinalDesign.stl
flight_controller/: Cargo.toml
flight_controller/.cargo/: config.toml
flight_controller/src/: esc.rs  gy521.rs  lib.rs  math.rs  mem.rs  sync.rs  wifi.rs
