[package]
edition = "2021"
name    = "flight_controller"
version = "0.1.0"

[[bin]]
name = "flight_controller"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
embedded-io = "0.6.1"
esp-alloc = { version = "0.6.0" , optional = true}
esp-backtrace = { version = "0.15.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }

esp-hal = { version = "0.23.1", features = ["esp32", "unstable", "quad-psram"] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.12.0", optional = true, default-features = false, features = [
  "esp-alloc",
  "esp32",
  "log",
  "utils",
  "wifi",
] }

smoltcp = { version = "0.12.0", default-features = false, optional = true, features = [
  #"medium-ethernet",
  "medium-ip",
  "proto-ipv4",
  "socket-raw",
  "socket-udp",
] }

fugit = "0.3.7"
heapless = { version = "0.8.0", default-features = false, optional = true}
libm = "0.2.11"
log = { version = "0.4.21" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[features]
wifi = ["dep:esp-alloc", "dep:esp-wifi", "dep:smoltcp", "dep:heapless"]

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package.smoltcp]
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
